# explorando_agno

./: .env.exemplo  .gitignore  README.md  api.py  pyproject.toml  workflow.py
agents/: analista_financeiro.py  pesquisador_financeiro.py
exemplos/: 1_basic_agent.py  2_agent_with_tools.py  3_agent_with_memory.py
material_aula/: Explorando Agno.excalidraw
